# vic2png

./: LICENSE  README.md  pyproject.toml  tox.ini
src/img2png/: reader.py  vic2png.py
src/vic2png/: cli.py  convert.py  reader.py
test/: conftest.py  test_vic2png.py
test/test_resources/: NLG_0900_0746838848_005FDR_N0440898NCAM00500_0A02I4J01.IMG
test/test_resources/reference/: test_vic.tif
