[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >= 3.4, < 4"]

[project]
authors = [
  {name = "Jacqueline Ryan", email = "Jacqueline.Ryan@jpl.caltech.edu"},
]
dependencies = [
  "pvl",
  "numpy",
  "pillow",
]
description = "Utility for converting .VIC/.IMG images to compressed image formats."
name = "vic2png"
readme = "README.md"
requires-python = ">=3.8"
version = "0.2.0"

[project.optional-dependencies]
dev = [
  "black",
  "flit",
  "mypy",
  "pyright",
  "pytest",
]

[tool.flit.module]
name = "img2png"

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]

# [options]
# py_modules = ["img2png"]

[project.scripts]
vic2png = "img2png.vic2png:cli"
